--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,15 @@
 {
-    "presets": [
-        ["es2015", {
-            "modules": false
-        }], "react", "stage-0"
-    ],
-    "plugins": [
-      "lodash",
-      "transform-decorators-legacy",
-      "transform-runtime",
-      "transform-object-assign",
-      "react-require"],
-    "env": {
-        "development": {},
-        "gulp": {
-            "presets": ["es2015", "react", "stage-0"]
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions"]
         }
-    }
+      }
+    ],
+    "react",
+    "stage-2"
+  ],
+  "plugins": ["transform-decorators-legacy"]
 }
