--- a/package.json
+++ b/package.json
@@ -19,19 +19,17 @@
   "license": "ISC",
   "homepage": "https://github.com/ustwo/pledge-parental-leave",
   "devDependencies": {
+    "@babel/preset-env": "^7.0.0-beta.52",
+    "@babel/register": "^7.0.0-beta.54",
     "autoprefixer": "^6.3.7",
     "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^6.16.0",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-lodash": "^3.2.10",
-    "babel-plugin-react-require": "^2.1.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.22.0",
     "cssnano": "^3.7.1",
@@ -82,7 +80,7 @@
     "fs-extra": "^0.30.0",
     "fs-extra-promise": "^0.4.1",
     "fs-promise": "^0.5.0",
-    "gulp": "^3.9.1",
+    "gulp": "https://github.com/gulpjs/gulp.git#master",
     "gulp-awslambda": "^0.4.0",
     "gulp-babel": "^6.1.2",
     "gulp-zip": "^3.2.0",
