--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@dylanvann/gatsby-transformer-cloudinary": "^1.0.36",
+    "@fs/gatsby-plugin-drive": "^0.0.1",
+    "crypto": "^1.0.1",
     "gatsby": "^2.0.19",
-    "gatsby-image": "^2.0.15",
+    "gatsby-image": "^2.0.20",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-react-helmet": "^3.0.0",
