--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fs/gatsby-plugin-drive": "^0.0.1",
     "babel-preset-gatsby": "^0.1.4",
     "crypto": "^1.0.1",
+    "dotenv": "^6.1.0",
     "emotion": "^9.2.12",
     "emotion-normalize": "^8.0.0",
     "emotion-server": "^9.2.12",
