--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "emotion-normalize": "^8.0.0",
     "emotion-server": "^9.2.12",
     "emotion-theming": "^9.2.9",
+    "facepaint": "^1.2.1",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-emotion": "^2.0.6",
+    "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-no-sourcemaps": "^2.0.1",
     "gatsby-plugin-offline": "^2.0.11",
