--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@dylanvann/gatsby-transformer-cloudinary": "^1.0.36",
+    "@emotion/core": "^10.0.0",
+    "@emotion/styled": "^10.0.0",
     "@fs/gatsby-plugin-drive": "^0.0.1",
+    "@rebass/grid": "^6.0.0-4",
     "babel-preset-gatsby": "^0.1.4",
     "crypto": "^1.0.1",
     "dotenv": "^6.1.0",
-    "emotion": "^9.2.12",
+    "emotion": "^10.0.0",
     "emotion-normalize": "^8.0.0",
-    "emotion-server": "^9.2.12",
-    "emotion-theming": "^9.2.9",
+    "emotion-server": "^10.0.0",
+    "emotion-theming": "^10.0.0",
     "facepaint": "^1.2.1",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.20",
@@ -30,7 +33,6 @@
     "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-emotion": "^9.2.12",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
