--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-emotion": "^2.0.6",
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-no-sourcemaps": "^2.0.1",
     "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-polyfill-io": "^1.0.5",
