--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "hex-rgb": "^4.0.0",
     "prettier": "^1.14.2"
   },
   "repository": {
