--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-emotion": "^2.0.6",
+    "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-netlify": "^2.0.6",
@@ -43,7 +44,6 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "postbuild": "cp -R public docs",
     "develop": "gatsby develop",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
