--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "name": "gatsby-starter-default",
   "description": "Gatsby default starter",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@dylanvann/gatsby-transformer-cloudinary": "^1.0.36",
-    "@emotion/core": "^10.0.0",
-    "@emotion/styled": "^10.0.0",
+    "@emotion/core": "^10.0.9",
+    "@emotion/styled": "^10.0.9",
     "@fs/gatsby-plugin-drive": "^0.0.1",
     "@rebass/grid": "^6.0.0-4",
+    "@styled-system/css": "^1.0.3",
+    "babel-plugin-emotion": "^10.0.9",
     "babel-preset-gatsby": "^0.1.4",
     "crypto": "^1.0.1",
     "dotenv": "^6.1.0",
     "emotion": "^10.0.0",
-    "emotion-normalize": "^8.0.0",
+    "emotion-normalize": "^10.0.0",
     "emotion-server": "^10.0.0",
     "emotion-theming": "^10.0.0",
     "facepaint": "^1.2.1",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.20",
-    "gatsby-plugin-emotion": "^2.0.6",
+    "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-manifest": "^2.0.5",
@@ -36,7 +38,8 @@
     "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "styled-system": "^4.1.0"
   },
   "keywords": [
     "gatsby"
@@ -50,6 +53,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@emotion/babel-preset-css-prop": "^10.0.9",
     "hex-rgb": "^4.0.0",
     "prettier": "^1.14.2"
   },
