--- a/package.json
+++ b/package.json
@@ -5,39 +5,39 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@dylanvann/gatsby-transformer-cloudinary": "^1.0.36",
-    "@emotion/core": "^10.0.9",
-    "@emotion/styled": "^10.0.9",
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.10",
     "@fs/gatsby-plugin-drive": "^0.0.1",
-    "@rebass/grid": "^6.0.0-4",
+    "@rebass/grid": "^6.0.0",
     "@styled-system/css": "^1.0.3",
     "babel-plugin-emotion": "^10.0.9",
-    "babel-preset-gatsby": "^0.1.4",
+    "babel-preset-gatsby": "^0.1.10",
     "crypto": "^1.0.1",
     "dotenv": "^6.1.0",
     "emotion": "^10.0.0",
     "emotion-normalize": "^10.0.0",
     "emotion-server": "^10.0.0",
-    "emotion-theming": "^10.0.0",
+    "emotion-theming": "^10.0.10",
     "facepaint": "^1.2.1",
-    "gatsby": "^2.0.19",
-    "gatsby-image": "^2.0.20",
+    "gatsby": "^2.3.4",
+    "gatsby-image": "^2.0.36",
     "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-google-fonts": "^0.0.4",
-    "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-manifest": "^2.0.26",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-no-sourcemaps": "^2.0.1",
     "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-polyfill-io": "^1.0.5",
-    "gatsby-plugin-prefetch-google-fonts": "^1.0.11",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.7",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.1",
+    "gatsby-plugin-react-helmet": "^3.0.11",
+    "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.3",
-    "gatsby-source-filesystem": "^2.0.4",
+    "gatsby-source-filesystem": "^2.0.28",
     "gatsby-source-google-sheets": "^1.1.1",
     "gatsby-transformer-sharp": "^2.1.4",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "styled-system": "^4.1.0"
   },
