--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "emotion-theming": "^10.0.10",
     "gatsby": "^2.3.4",
     "gatsby-image": "^2.0.36",
+    "gatsby-plugin-brotli": "^1.0.1",
     "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-google-fonts": "^0.0.4",
