--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@fs/gatsby-plugin-drive": "^0.0.1",
+    "@rebass/grid": "^6.0.0",
     "babel-plugin-emotion": "^10.0.9",
     "babel-preset-gatsby": "^0.1.10",
     "crypto": "^1.0.1",
@@ -16,8 +17,8 @@
     "emotion-normalize": "^10.0.0",
     "emotion-server": "^10.0.0",
     "emotion-theming": "^10.0.10",
-    "gatsby": "^2.5.5",
-    "gatsby-image": "^2.1.0",
+    "gatsby": "^2.3.4",
+    "gatsby-image": "^2.0.36",
     "gatsby-plugin-brotli": "^1.0.1",
     "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-google-analytics": "^2.0.18",
@@ -36,8 +37,8 @@
     "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "styled-system": "^4.2.2"
+    "react-helmet": "^5.2.0",
+    "styled-system": "^4.1.0"
   },
   "keywords": [
     "gatsby"
