--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@fs/gatsby-plugin-drive": "^0.0.1",
-    "@rebass/grid": "^6.0.0",
+    "@styled-system/theme-get": "^5.0.6",
     "babel-plugin-emotion": "^10.0.9",
     "babel-preset-gatsby": "^0.1.10",
     "crypto": "^1.0.1",
@@ -38,7 +38,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
-    "styled-system": "^4.1.0"
+    "styled-system": "^5.0.10"
   },
   "keywords": [
     "gatsby"
