--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gatsby-plugin-no-sourcemaps": "^2.0.1",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-polyfill-io": "^1.0.5",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.1",
+    "gatsby-plugin-prefetch-google-fonts": "1.4.3",
     "gatsby-plugin-react-helmet": "^3.0.11",
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.3",
