--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
+  // "plugins": [
+  //   ["@babel/plugin-transform-classes", {
+  //     "loose": false
+  //   }]
+  // ],
   "presets": [
     [
       "babel-preset-gatsby",
