--- a/package.json
+++ b/package.json
@@ -4,41 +4,44 @@
   "version": "1.1.0",
   "author": "Simon Lindsay <simonlindsay@gmail.com>",
   "dependencies": {
+    "@babel/plugin-transform-classes": "^7.15.4",
+    "@babel/plugin-transform-spread": "^7.12.1",
     "@dylanvann/gatsby-transformer-cloudinary": "^1.0.36",
-    "@emotion/core": "^10.0.14",
-    "@emotion/styled": "^10.0.14",
-    "@styled-system/theme-get": "^5.0.12",
-    "babel-plugin-emotion": "^10.0.14",
-    "babel-preset-gatsby": "^0.2.0",
+    "@emotion/core": "^10.1.1",
+    "@emotion/styled": "^10.0.27",
+    "@styled-system/theme-get": "^5.1.2",
+    "babel-plugin-emotion": "^10.2.2",
+    "babel-preset-gatsby": "^0.2.36",
     "crypto": "^1.0.1",
-    "dotenv": "^8.0.0",
-    "emotion": "^10.0.14",
-    "emotion-normalize": "^10.0.0",
-    "emotion-server": "^10.0.14",
-    "emotion-theming": "^10.0.14",
-    "gatsby": "^2.11.6",
-    "gatsby-image": "^2.2.3",
-    "gatsby-plugin-brotli": "^1.0.1",
-    "gatsby-plugin-emotion": "^4.0.6",
-    "gatsby-plugin-google-analytics": "^2.1.1",
-    "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.2.0",
-    "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-no-sourcemaps": "^2.0.1",
-    "gatsby-plugin-offline": "^2.0.25",
+    "dotenv": "^8.6.0",
+    "emotion": "^10.0.27",
+    "emotion-normalize": "^10.1.0",
+    "emotion-server": "^10.0.27",
+    "emotion-theming": "^10.0.27",
+    "gatsby": "^2.32.13",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-brotli": "^1.3.1",
+    "gatsby-plugin-emotion": "^4.5.0",
+    "gatsby-plugin-google-analytics": "^2.11.0",
+    "gatsby-plugin-google-fonts": "1.0.1",
+    "gatsby-plugin-image": "^1.13.0",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-netlify": "^2.11.1",
+    "gatsby-plugin-no-sourcemaps": "^2.9.0",
+    "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-polyfill-io": "^1.0.5",
     "gatsby-plugin-prefetch-google-fonts": "1.4.3",
-    "gatsby-plugin-google-fonts": "1.0.1",
-    "gatsby-plugin-react-helmet": "^3.0.11",
-    "gatsby-plugin-sharp": "^2.2.1",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sharp": "^2.14.4",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.3",
-    "gatsby-source-filesystem": "^2.1.1",
+    "gatsby-source-filesystem": "^2.11.1",
     "gatsby-source-google-sheets": "^1.1.1",
-    "gatsby-transformer-sharp": "^2.1.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "gatsby-source-google-spreadsheet": "^2.0.0",
+    "gatsby-transformer-sharp": "^2.12.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^5.2.0",
-    "styled-system": "^5.0.12"
+    "styled-system": "^5.1.5"
   },
   "keywords": [
     "gatsby"
@@ -52,9 +55,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@emotion/babel-preset-css-prop": "^10.0.14",
-    "hex-rgb": "^4.1.0",
-    "prettier": "^1.18.2"
+    "@emotion/babel-preset-css-prop": "^10.2.1",
+    "hex-rgb": "^4.3.0",
+    "prettier": "^1.19.1"
+  },
+  "resolutions": {
+    "@babel/plugin-transform-spread": "7.12.1"
   },
   "repository": {
     "type": "git",
